[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Blob 2.0 Scr/Planc_P1.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Blob 2.0 Scr/Camera2D.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Blob 2.0 Scr/Movement.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Blob 2.0 Scr/Graphics.gd" type="Script" id=4]
[ext_resource path="res://Art/UI & Menus/Fonts/bahnschrift.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scripts/Contoles & UI/Health_HUD.gd" type="Script" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="DynamicFont" id=2]
size = 22
outline_size = 1
outline_color = Color( 0.0352941, 0.0235294, 0.0235294, 1 )
font_data = ExtResource( 5 )

[sub_resource type="CircleShape2D" id=3]
radius = 20.0

[node name="Planc_P1" type="Node2D"]
script = ExtResource( 1 )
curve = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.25, 1.25 )
process_mode = 0
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="Camera2D"]
one_shot = true

[node name="Movement" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Graphics" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="StateTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Turbo" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="Health_HUD" type="Label" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.635294 )
margin_left = 49.0
margin_top = 149.0
margin_right = 145.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 2 )
text = "Health: "
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grafic_health" type="Position2D" parent="CanvasLayer/Health_HUD"]
position = Vector2( 41, -69 )

[node name="Area2D" type="KinematicBody2D" parent="." groups=[
"Player",
]]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
[connection signal="timeout" from="Camera2D/Timer" to="Camera2D" method="_on_Timer_timeout"]
[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]
[connection signal="timeout" from="Turbo" to="." method="_on_Turbo_timeout"]
